# Biomedical-RAG

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-ci.yml
backend/: Dockerfile
backend/src/: config.py  main.py
backend/src/core/: rag_engine.py
frontend/: Dockerfile  app.py
infrastructure/: app.py  cdk_stack.py
infrastructure/cdk.out/: ChatbotRagBackendStack.assets.json  ChatbotRagBackendStack.metadata.json  ChatbotRagBackendStack.template.json  manifest.json  tree.json
infrastructure/cdk.out/asset.d4866e8ab1417328f841ed38f13b7c130eba3658f4e6b60b4e48e765b8190a96/: Dockerfile
infrastructure/cdk.out/asset.d4866e8ab1417328f841ed38f13b7c130eba3658f4e6b60b4e48e765b8190a96/src/: config.py
infrastructure/cdk.out/asset.d4866e8ab1417328f841ed38f13b7c130eba3658f4e6b60b4e48e765b8190a96/src/core/: rag_engine.py
tests/: conftest.py  test_config.py  test_unit.py
